CIRC-1824 remove code smell